Add button for size change

--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 </head>
 <body>
     <div class="container"></div>
+    <div class="sidebar">
+        <button class="size-button">Change size</button>
+    </div>
+
 </body>
 </html>
