--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <div class="container"></div>
+    
+    <div class="top-container">
+        <div class="container"></div>
+    </div>
+
     <div class="sidebar">
         <button class="size-button">Change size</button>
     </div>
